--- a/package.json
+++ b/package.json
@@ -2,37 +2,75 @@
   "name": "vibe_frontend",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
-  "keywords": ["Internet Computer", "Motoko", "JavaScript", "Canister"],
+  "keywords": [
+      "Internet Computer",
+      "Motoko",
+      "JavaScript",
+      "Canister"
+  ],
   "scripts": {
-    "build": "webpack",
-    "prebuild": "npm run copy:types",
-    "start": "webpack serve --mode development --env development",
-    "prestart": "npm run copy:types",
-    "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --exclude='*.most' --delete src/declarations"
+      "build": "webpack",
+      "prebuild": "npm run copy:types",
+      "start": "webpack serve --host localhost --port 8080 --mode development --env development",
+      "prestart": "npm run copy:types",
+      "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.15.5",
-    "@dfinity/candid": "0.15.5",
-    "@dfinity/principal": "0.15.5",
-    "assert": "2.0.0",
-    "buffer": "6.0.3",
-    "events": "3.3.0",
-    "html-webpack-plugin": "5.5.0",
-    "process": "0.11.10",
-    "stream-browserify": "3.0.0",
-    "terser-webpack-plugin": "^5.3.3",
-    "util": "0.12.4",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.8.1"
-  },
-  "engines": {
-    "node": "^12 || ^14 || ^16 || ^18"
+      "@dfinity/agent": "0.10.3",
+      "@dfinity/candid": "0.10.3",
+      "@dfinity/principal": "^0.10.3",
+      "@material-ui/core": "4.6.1",
+      "@material-ui/icons": "4.5.1",
+      "assert": "2.0.0",
+      "buffer": "6.0.3",
+      "copy-webpack-plugin": "^10.2.4",
+      "css-loader": "^6.5.1",
+      "events": "3.3.0",
+      "html-webpack-plugin": "5.5.0",
+      "process": "0.11.10",
+      "stream-browserify": "3.0.0",
+      "style-loader": "^3.3.1",
+      "tailwindcss": "^3.2.7",
+      "terser-webpack-plugin": "5.3.1",
+      "ts-loader": "^9.2.6",
+      "typescript": "^4.5.5",
+      "util": "0.12.4",
+      "webpack": "5.69.1",
+      "webpack-cli": "4.10.0",
+      "webpack-dev-server": "^4.4.0"
   },
   "browserslist": [
-    "last 2 chrome version",
-    "last 2 firefox version",
-    "last 2 safari version",
-    "last 2 edge version"
-  ]
+      "last 2 chrome version",
+      "last 2 firefox version",
+      "last 2 safari version",
+      "last 2 edge version"
+  ],
+  "dependencies": {
+      "@connect2ic/core": "^0.2.0-beta.5",
+      "@connect2ic/react": "^0.2.0-beta.5",
+      "@dfinity/auth-client": "^0.14.1",
+      "@dfinity/identity": "^0.15.1",
+      "@dfinity/utils": "^0.0.14",
+      "@react-three/drei": "^9.65.3",
+      "@react-three/fiber": "^8.12.1",
+      "framer-motion": "^10.12.2",
+      "gltf-webpack-loader": "^1.0.6",
+      "image-webpack-loader": "^8.1.0",
+      "lit-html": "^1.4.1",
+      "maath": "^0.5.3",
+      "prop-types": "^15.8.1",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-modal": "^3.16.1",
+      "react-router-dom": "^6.4.3",
+      "react-scripts": "5.0.0",
+      "react-tilt": "^1.0.2",
+      "react-vertical-timeline-component": "^3.6.0",
+      "sass": "^1.62.0",
+      "sass-loader": "^13.2.2",
+      "tailwindcss-classnames": "^3.0.7",
+      "three": "^0.151.3",
+      "ts-loader": "^9.2.3",
+      "typescript": "^4.3.5"
+  }
 }
