--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -1,18 +1,12 @@
 [package]
-name = "vibe__token_backend"
+name = "common"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
 candid = "0.7.14"
 hex = "0.4.3"
-ic-cdk = "0.5.2"
-ic-cdk-macros = "0.5.2"
-serde = "1.0.159"
+serde = "1.0.160"
 serde_bytes = "0.11.9"
-common = { path="../common" }
