--- a/src/vibe_token/Cargo.toml
+++ b/src/vibe_token/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vibe__token_backend"
+name = "vibe_token"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,4 +15,4 @@ ic-cdk = "0.5.2"
 ic-cdk-macros = "0.5.2"
 serde = "1.0.159"
 serde_bytes = "0.11.9"
-common = { path="../common" }
+common = { path = "../common" }
