--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,14 +2,12 @@ on:
   release:
     types: [created]
 
-permissions:
-  packages: write
-
 name: Release
 
 jobs:
   release:
     name: Release
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
